fix overflowing system message

--- a/themes/finna/less/bootstrap.less
+++ b/themes/finna/less/bootstrap.less
@@ -1689,7 +1689,8 @@ ul.jstree-container-ul > li.jstree-node, .list-group.facet .list-group-item:not(
 
 //== SYSTEM MESSAGES
 .system-messages {
-	  background-color: @brand-warning;
-    padding: 0.6em 0;
+	background-color: @brand-warning;
+    padding-top: 0.6em;
+    padding-bottom: 0.6em;
     text-align: center;
 }
